# MultiplayerGameRust

./: Cargo.toml  README.md  build.rs
res/Models1/: test.mtl  testmapgame.mtl
src/: camera.rs  main.rs  window.rs
src/Shaders/: light.wgsl  shader.wgsl  shadow.wgsl
src/window/: camera.rs  instances.rs  light.rs  mod.rs  model.rs  render_pipeline.rs  resources.rs  shadow.rs  texture.rs  ui.rs  vertex.rs
