[package]
name = "multiplayer_client_rust"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2.1", features = [
    "async",
]}
imgui = "0.8"
imgui-wgpu = "0.20"
imgui-winit-support = {version ="0.8", features = [ "winit-26" ]}
cgmath_dolly = "0.1.0"
# rapier3d = "0.14.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
